--- a/assets/css/leadmark.css
+++ b/assets/css/leadmark.css
@@ -12736,6 +12736,7 @@ textarea.form-control {
 }
 
 .team-img {
+  max-width: 100%;
   width: 140px;
   border-radius: 50%;
   padding: 0 30px;
@@ -12802,10 +12803,6 @@ ul li .fa {
   color: #fff;
 }
 
-ul li.facebook {
-  background: #3b5998;
-}
-
 ul li.twitter {
   background: #00aced;
 }
@@ -12814,16 +12811,12 @@ ul li.instagram {
   background: #bc2a8d;
 }
 
-ul li.google {
-  background: #dd4b39;
+ul li.linkedin {
+  background: #00aced;
 }
 
 ul li.whatsapp {
   background: #4dc247;
-}
-
-ul li.facebook div.slider {
-  background: #627aac;
 }
 
 ul li.twitter div.slider {
@@ -12834,8 +12827,8 @@ ul li.instagram div.slider {
   background: #dd94c6;
 }
 
-ul li.google div.slider {
-  background: #eea59c;
+ul li.linkedin div.slider {
+  background: #7fd5f6;
 }
 
 ul li.whatsapp div.slider {
